
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitybackground">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center"
        android:text="@string/txv_title_temp"
        android:textColor="@color/black_alpha"
        android:textSize="30sp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/indoorTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:padding="5dip"
            android:text="@string/txv_indoor_temp"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/indoorTempShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:padding="5dip"
            android:text="@string/txv_indoor_temp_show"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/outdoorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light"
            android:textColor="@color/blue_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outdoorLightShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light_show"
            android:textColor="@color/title_bar_color"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/btnToggle"
            android:layout_width="60dp"
            android:layout_height="52dp"
            android:layout_marginLeft="40dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <Button
            android:id="@+id/btnUpdateTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#72abf2"
            android:padding="5dip"
            android:text=" Update temperature "
            android:textAllCaps="false"
            android:textColor="#4E342E"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip">
    </LinearLayout>

</LinearLayout>